src/less/navigation.less
@navSize: 5rem;

body {
  padding-top: @navSize;
}

/*! purgecss start ignore */

nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 5000;
  box-shadow: @shadow;
  height: @navSize;
  background: @color-s100;
  .logo {
    @logoSize: 2rem;
    display: inline-block;
    margin: 0;
    font-size: @logoSize/1.2;
    margin: (@navSize - @logoSize)/2 1rem;
  }
  div {
    display: inline-block;
    vertical-align: top;
    [class*=pure-u] {
      white-space: nowrap;
    }
  }
  ul {
    vertical-align: top;
    display: inline-block;
    list-style: none;
    margin: 0;
    padding: 0;
    li {
      display: inline-block;
      padding: calc((@navSize - 2rem)/2 - 1px) 0;
      a {
        display: block;
        padding: 0.25rem .5rem;
        font-size: 0.9rem;
        font-weight: 700;
        color: @color-s800;
        text-decoration: none;
        border: 1px solid transparent;
        border-radius: 0.25rem;
        transition: all .2s;
        &:hover {
          border-color: @color-a700;
          text-decoration: none;
        }
      }
    }
  }
}

nav .menu-header-menu-r-container li:last-child a {
  background: @color-p500;
  color: @color-dark100;
  border-color: @color-p500;
  &:hover {
    border-color: @color-p500;
    background: @color-p300;
  }
}

/*! purgecss end ignore */

